# FidelityFX-SSSR

./: .gitattributes  .gitlab-ci.yml  .gitmodules  NOTICES.txt  readme.md
ffx-sssr/: .gitignore  CMakeLists.txt  README.md  ffx_sssr.h  sourceToHeader.py
ffx-sssr/inc/: ffx_sssr.h  ffx_sssr_d3d12.h  ffx_sssr_vk.h
ffx-sssr/shaders/: classify_tiles.hlsl  common.hlsl  intersect.hlsl  prepare_indirect_args.hlsl  resolve_eaw.hlsl  resolve_eaw_stride.hlsl  resolve_spatial.hlsl  resolve_temporal.hlsl
ffx-sssr/src/: context.cpp  context.h  context.inl  float3.h  float3.inl  macros.h  matrix4.h  matrix4.inl  memory.h  memory.inl  reflection_error.cpp  reflection_error.h  reflection_view.h  reflection_view.inl  reflections.cpp  resources.h  utils.h
ffx-sssr/src/d3d12/: context_d3d12.cpp  context_d3d12.h  context_d3d12.inl  descriptor_heap_d3d12.cpp  descriptor_heap_d3d12.h  descriptor_heap_d3d12.inl  reflection_view_d3d12.cpp  reflection_view_d3d12.h  reflection_view_d3d12.inl  sampler_d3d12.cpp  sampler_d3d12.h  shader_compiler_d3d12.cpp  shader_compiler_d3d12.h  shader_compiler_d3d12.inl  upload_buffer_d3d12.cpp  upload_buffer_d3d12.h  upload_buffer_d3d12.inl
ffx-sssr/src/vk/: buffer_vk.cpp  buffer_vk.h  context_vk.cpp  context_vk.h  context_vk.inl  image_vk.cpp  image_vk.h  reflection_view_vk.cpp  reflection_view_vk.h  sampler_vk.cpp  sampler_vk.h  shader_compiler_vk.cpp  shader_compiler_vk.h  shader_compiler_vk.inl  upload_buffer_vk.cpp  upload_buffer_vk.h  upload_buffer_vk.inl
sample/: CMakeLists.txt  README.md
sample/libs/dxc/: CMakeLists.txt
sample/media/: NOTICES.txt
sample/media/Chess/: scene.gltf
sample/media/envmaps/papermill/: specular.dds
sample/media/envmaps/white/: specular.dds
sample/src/Common/: SSSRSample.json  config.json
sample/src/DX12/: CMakeLists.txt
sample/src/DX12/Shaders/: ApplyReflections.hlsl  DepthDownsample.hlsl  ffx_spd.h
sample/src/DX12/Sources/: BlueNoiseSampler.cpp  BlueNoiseSampler.h  BufferDX12.cpp  BufferDX12.h  Renderer.cpp  Renderer.h  SSSR.cpp  SSSR.h  SSSRSample.cpp  SSSRSample.h  SampleRenderer.cpp  SampleRenderer.h  ShaderPass.cpp  ShaderPass.h  SssrSample.cpp  SssrSample.h  UI.cpp  UI.h  UploadHeapBuffersDX12.cpp  UploadHeapBuffersDX12.h  Utils.cpp  Utils.h  stdafx.cpp  stdafx.h
sample/src/Shaders/: ApplyReflections.hlsl  BlurReflections.hlsl  ClassifyTiles.hlsl  Common.hlsl  DepthDownsample.hlsl  Intersect.hlsl  Prefilter.hlsl  PrepareBlueNoiseTexture.hlsl  PrepareIndirectArgs.hlsl  Reproject.hlsl  ResolveSpatial.hlsl  ResolveTemporal.hlsl
sample/src/VK/: CMakeLists.txt
sample/src/VK/Shaders/: ApplyReflections.hlsl  DepthDownsample.hlsl  ffx_spd.h
sample/src/VK/Sources/: BlueNoiseSampler.cpp  BlueNoiseSampler.h  BufferVK.cpp  BufferVK.h  ImageVK.cpp  ImageVK.h  Renderer.cpp  Renderer.h  SSSR.cpp  SSSR.h  SampleRenderer.cpp  SampleRenderer.h  ShaderPass.cpp  ShaderPass.h  SssrSample.cpp  SssrSample.h  UI.cpp  UI.h  UploadHeapVK.cpp  UploadHeapVK.h  stdafx.cpp  stdafx.h
